[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/BuggyOverworld.png" type="Texture" id=1]
[ext_resource path="res://EnemyData/EnemyAnt.gd" type="Script" id=2]
[ext_resource path="res://EnemyData/PlayerDetectionArea.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 50, 0, 50, 50 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 50, 50, 50 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [  ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 2 ) ],
"loop": true,
"name": "Walk",
"speed": 10.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 1.5 )

[sub_resource type="CircleShape2D" id=6]
radius = 256.0

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 5, 5 )

[node name="EnemyAnt" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )
animation = "Walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="PlayerDetectionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 6 )

[node name="ColisionDetectionPlayer" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ColisionDetectionPlayer"]
shape = SubResource( 7 )

[connection signal="area_entered" from="PlayerDetectionArea" to="PlayerDetectionArea" method="_on_PlayerDetectionArea_area_entered"]
[connection signal="area_exited" from="PlayerDetectionArea" to="PlayerDetectionArea" method="_on_PlayerDetectionArea_area_exited"]
[connection signal="body_entered" from="PlayerDetectionArea" to="PlayerDetectionArea" method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="PlayerDetectionArea" method="_on_PlayerDetectionArea_body_exited"]
[connection signal="body_entered" from="ColisionDetectionPlayer" to="." method="_on_ColisionDetectionPlayer_body_entered"]
